--- a/services/package.json
+++ b/services/package.json
@@ -27,6 +27,7 @@
     "lit": "^3.3.1",
     "pg": "^8.16.3",
     "webpack": "^5.103.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "zod": "^4.1.13"
   }
 }
