--- a/services/package.json
+++ b/services/package.json
@@ -34,6 +34,7 @@
     "keycloak-js": "^26.2.1",
     "lit": "^3.3.1",
     "pg": "^8.16.3",
+    "uuid": "^13.0.0",
     "webpack": "^5.103.0",
     "webpack-cli": "^5.1.4",
     "zod": "^4.1.13"
